Add canedit field to response
