# docs/swagger.yaml
@@ -39,6 +39,8 @@ definitions:
     type: object
   get_task.Response:
     properties:
+      canEdit:
+        type: boolean
       codeToSolve:
         type: string
       responseInfo:
@@ -417,10 +419,10 @@ paths:
       summary: Get task status
       tags:
       - Skips
-  /tasks/{alias}:
+  /task/{alias}:
     get:
       description: Retrieves the processed code associated with the given alias from
-        the database.
+        the database, including whether the user can edit the task.
       parameters:
       - description: Task alias
         in: path
@@ -432,11 +434,19 @@ paths:
       responses:
         "200":
           description: Example response" Example({"responseInfo":{"status":"OK"},"codeToSolve":"processed
-            code"})
+            code","canEdit":true})
           schema:
             $ref: '#/definitions/get_task.Response'
         "400":
           description: Task alias is empty
+          schema:
+            $ref: '#/definitions/get_task.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/get_task.Response'
+        "404":
+          description: Task not found
           schema:
             $ref: '#/definitions/get_task.Response'
         "500":
